[package]
name = "realworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
chrono = "0.4.26"
dotenv = "0.15.0"
mongodb = "2.6.0"
tokio = { verison = "1.29.1", features = ["full"] }
